geometry extrude crash #74876

Closed
opened 2020-03-18 12:51:27 +01:00 by RABATEL Cyril · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87

Blender Version
Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-17 20:42, hash: dc2df8307f
Worked: (newest version of Blender that worked as expected)

Short description of error
When extruding an edge on my 3d model blender crashes. I have a shrinkwrap modifier and amirror modifier.

Exact steps for others to reproduce the error
You have to extrude some edges and blender will crash

ps: this is my first bug report sorry if it is not perfect.

furr_geo_bug_report.blend

2020-03-18 12-45-15.mkv

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87 **Blender Version** Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-17 20:42, hash: `dc2df8307f` Worked: (newest version of Blender that worked as expected) **Short description of error** When extruding an edge on my 3d model blender crashes. I have a shrinkwrap modifier and amirror modifier. **Exact steps for others to reproduce the error** You have to extrude some edges and blender will crash ps: this is my first bug report sorry if it is not perfect. [furr_geo_bug_report.blend](https://archive.blender.org/developer/F8413734/furr_geo_bug_report.blend) [2020-03-18 12-45-15.mkv](https://archive.blender.org/developer/F8413745/2020-03-18_12-45-15.mkv)
Author

Added subscriber: @Cyril_R

Added subscriber: @Cyril_R

#74873 was marked as duplicate of this issue

#74873 was marked as duplicate of this issue
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @Morphin, @lichtwerk

Added subscribers: @Morphin, @lichtwerk
Member

I still have this assert in my log, but for some reason, I cannot reproduce anymore now... checking further...

BLI_assert failed: /blender/source/blender/editors/transform/transform_snap_object.c:828, raycastEditMesh(), at 'poly_to_tri_count(bm->totface, bm->totloop) == em_orig->tottri'
I still have this assert in my log, but for some reason, I cannot reproduce anymore now... checking further... ``` BLI_assert failed: /blender/source/blender/editors/transform/transform_snap_object.c:828, raycastEditMesh(), at 'poly_to_tri_count(bm->totface, bm->totloop) == em_orig->tottri' ```
Germano Cavalcante self-assigned this 2020-03-18 13:52:42 +01:00

This issue was referenced by efdc93fcc6

This issue was referenced by efdc93fcc6923a7356f84f74fed2e720b08ead74

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74876
No description provided.