Fix T74876: Crash when snapping to faces

The crash occurs after operators change the amount of editmesh looptris.
The looptris of the evaluated object's editmesh are not updated.